// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JIRA wiki markup - Block Card should create Block Card between lines of text 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "line 1 ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "data": null,
        "datasource": null,
        "layout": null,
        "localId": null,
        "url": "http://...",
        "width": null,
      },
      "type": "blockCard",
    },
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "line 2 ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Block Card should create Block Card for old representation between lines of text 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "line 1 ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "data": null,
        "datasource": null,
        "layout": null,
        "localId": null,
        "url": "http://...",
        "width": null,
      },
      "type": "blockCard",
    },
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "line 2 ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Block Card should create Block Card if preceded and followed by text 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "abc ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "data": null,
        "datasource": null,
        "layout": null,
        "localId": null,
        "url": "http://...",
        "width": null,
      },
      "type": "blockCard",
    },
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": " def",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Block Card should create Block Card with nothing else in the document 1`] = `
{
  "content": [
    {
      "attrs": {
        "data": null,
        "datasource": null,
        "layout": null,
        "localId": null,
        "url": "http://...",
        "width": null,
      },
      "type": "blockCard",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Block Card should create Block Card with whitespace on the same line 1`] = `
{
  "content": [
    {
      "attrs": {
        "data": null,
        "datasource": null,
        "layout": null,
        "localId": null,
        "url": "http://...",
        "width": null,
      },
      "type": "blockCard",
    },
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": " ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "data": null,
        "datasource": null,
        "layout": null,
        "localId": null,
        "url": "http://...",
        "width": null,
      },
      "type": "blockCard",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Block Card should create Block Cards in panel 1`] = `
{
  "content": [
    {
      "attrs": {
        "__autoSize": false,
        "displayMode": null,
        "isNumberColumnEnabled": false,
        "layout": "default",
        "localId": "",
        "width": null,
      },
      "content": [
        {
          "attrs": {
            "localId": null,
          },
          "content": [
            {
              "attrs": {
                "background": null,
                "colspan": 1,
                "colwidth": null,
                "localId": null,
                "rowspan": 1,
              },
              "content": [
                {
                  "attrs": {
                    "localId": null,
                    "panelColor": null,
                    "panelIcon": null,
                    "panelIconId": null,
                    "panelIconText": null,
                    "panelType": "info",
                  },
                  "content": [
                    {
                      "attrs": {
                        "localId": null,
                      },
                      "content": [
                        {
                          "text": "test ",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "panel",
                },
                {
                  "attrs": {
                    "data": null,
                    "datasource": null,
                    "layout": null,
                    "localId": null,
                    "url": "http://...",
                    "width": null,
                  },
                  "type": "blockCard",
                },
                {
                  "attrs": {
                    "localId": null,
                    "panelColor": null,
                    "panelIcon": null,
                    "panelIconId": null,
                    "panelIconText": null,
                    "panelType": "info",
                  },
                  "content": [
                    {
                      "attrs": {
                        "localId": null,
                      },
                      "content": [
                        {
                          "text": " test",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "panel",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
      ],
      "type": "table",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Block Card should create Block Cards in table 1`] = `
{
  "content": [
    {
      "attrs": {
        "__autoSize": false,
        "displayMode": null,
        "isNumberColumnEnabled": false,
        "layout": "default",
        "localId": "",
        "width": null,
      },
      "content": [
        {
          "attrs": {
            "localId": null,
          },
          "content": [
            {
              "attrs": {
                "background": null,
                "colspan": 1,
                "colwidth": null,
                "localId": null,
                "rowspan": 1,
              },
              "content": [
                {
                  "attrs": {
                    "data": null,
                    "datasource": null,
                    "layout": null,
                    "localId": null,
                    "url": "http://...",
                    "width": null,
                  },
                  "type": "blockCard",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
      ],
      "type": "table",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Block Card should create embedCard (it is a block node so all content should move to other lines 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "hello ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "layout": "center",
        "localId": null,
        "originalHeight": null,
        "originalWidth": null,
        "url": "http://...",
        "width": 100,
      },
      "type": "embedCard",
    },
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": " world!",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Block Card should create embedCard inside table 1`] = `
{
  "content": [
    {
      "attrs": {
        "__autoSize": false,
        "displayMode": null,
        "isNumberColumnEnabled": false,
        "layout": "default",
        "localId": "",
        "width": null,
      },
      "content": [
        {
          "attrs": {
            "localId": null,
          },
          "content": [
            {
              "attrs": {
                "background": null,
                "colspan": 1,
                "colwidth": null,
                "localId": null,
                "rowspan": 1,
              },
              "content": [
                {
                  "attrs": {
                    "layout": "center",
                    "localId": null,
                    "originalHeight": null,
                    "originalWidth": null,
                    "url": "http://...",
                    "width": 100,
                  },
                  "type": "embedCard",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
      ],
      "type": "table",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Block Card should recover existing Block Cards 1`] = `
{
  "content": [
    {
      "attrs": {
        "__autoSize": false,
        "displayMode": null,
        "isNumberColumnEnabled": false,
        "layout": "default",
        "localId": "",
        "width": null,
      },
      "content": [
        {
          "attrs": {
            "localId": null,
          },
          "content": [
            {
              "attrs": {
                "background": null,
                "colspan": 1,
                "colwidth": null,
                "localId": null,
                "rowspan": 1,
              },
              "content": [
                {
                  "attrs": {
                    "data": null,
                    "datasource": null,
                    "layout": null,
                    "localId": null,
                    "url": "https://aolrich-automation.atlassian.net/browse/SOF-1",
                    "width": null,
                  },
                  "type": "blockCard",
                },
              ],
              "type": "tableCell",
            },
            {
              "attrs": {
                "background": null,
                "colspan": 1,
                "colwidth": null,
                "localId": null,
                "rowspan": 1,
              },
              "content": [
                {
                  "attrs": {
                    "data": null,
                    "datasource": null,
                    "layout": null,
                    "localId": null,
                    "url": "https://aolrich-automation.atlassian.net/browse/SOF-1",
                    "width": null,
                  },
                  "type": "blockCard",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
      ],
      "type": "table",
    },
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "      ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "data": null,
        "datasource": null,
        "layout": null,
        "localId": null,
        "url": "https://aolrich-automation.atlassian.net/browse/SOF-1",
        "width": null,
      },
      "type": "blockCard",
    },
  ],
  "type": "doc",
}
`;
